ingress/traefik/ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`www.woaisok8s.com`)
    kind: Rule
    services:
    - name: nginx
      port: 80
