ingress/traefik/traefik-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: kube-system
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`traefik.woaisok8s.com`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
  tls:
    secretName: traefik-cert
